fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -98,9 +98,12 @@ p {
     justify-content: center;
 }
 
-.tech-stack-container,
-.projects-container {
+.tech-stack-container {
     padding: 50vh 0;
+}
+
+.projects-container {
+    padding: 50vh 0 0 0;
 }
 
 .home-container-spacing,
